--- a/apps/v4/content/docs/components/form.mdx
+++ b/apps/v4/content/docs/components/form.mdx
@@ -1,5 +1,5 @@
 ---
-title: React Hook Form
+title: Form
 description: Building forms with React Hook Form and Zod.
 links:
   doc: https://react-hook-form.com
