--- a/apps/v4/content/docs/components/sonner.mdx
+++ b/apps/v4/content/docs/components/sonner.mdx
@@ -68,7 +68,7 @@ npm install sonner next-themes
 
 <Step>Add the Toaster component</Step>
 
-```tsx title="app/layout.tsx" {1,9}
+```tsx showLineNumbers title="app/layout.tsx" {1,8}
 import { Toaster } from "@/components/ui/sonner"
 
 export default function RootLayout({ children }) {
@@ -76,8 +76,8 @@ export default function RootLayout({ children }) {
     <html lang="en">
       <head />
       <body>
-        <main>{children}</main>
         <Toaster />
+        <main>{children}</main>
       </body>
     </html>
   )
@@ -142,6 +142,7 @@ const Toaster = ({ ...props }: ToasterProps) => {
           "--normal-bg": "var(--popover)",
           "--normal-text": "var(--popover-foreground)",
           "--normal-border": "var(--border)",
+          "--border-radius": "var(--radius)",
         } as React.CSSProperties
       }
       {...props}
