docs(Toast): add deprecation Callout (#6982)
* docs(Toast): add deprecation Callout

* docs(Toast): add tw4 and react19 specifics

--- a/apps/www/content/docs/components/toast.mdx
+++ b/apps/www/content/docs/components/toast.mdx
@@ -7,6 +7,13 @@ links:
   api: https://www.radix-ui.com/docs/primitives/components/toast#api-reference
 ---
 
+<Callout>
+
+We're deprecating the `toast` component in favor of `sonner` in projects using Tailwind v4 and React 19.
+[Read more](https://ui.shadcn.com/docs/tailwind-v4#whats-new)
+
+</Callout>
+
 <ComponentPreview name="toast-demo" />
 
 ## Installation
