--- a/apps/www/content/docs/components/carousel.mdx
+++ b/apps/www/content/docs/components/carousel.mdx
@@ -174,6 +174,22 @@ Use the `orientation` prop to set the orientation of the carousel.
 </Carousel>
 ```
 
+### Dots
+
+Use the `CarouselDots` component to render pagination dots and navigate to a specific slide.
+
+<ComponentPreview
+  name="carousel-dots"
+  title="Carousel"
+  description="A carousel with dots navigation."
+/>
+
+<ComponentPreview
+  name="carousel-dot-vertical"
+  title="Carousel"
+  description="A vertical carousel with dots navigation."
+/>
+
 ## Options
 
 You can pass options to the carousel using the `opts` prop. See the [Embla Carousel docs](https://www.embla-carousel.com/api/options/) for more information.
